test/fixtures/type-error/typeError.lys

fun x(): i32 = false